--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -85,7 +85,27 @@
                         class="indieauth-link">aleph@badbunsen.com</a></div>
             </section>
             <aside class="bb_section_aside">
+                <a href="https:////www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac" title="DMCA.com Protection Status" class="dmca-badge">
+                <img src ="https://images.dmca.com/Badges/dmca_protected_sml_120d.png?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"  alt="DMCA.com Protection Status" />
+                </a>
+                <script>
+                    (function () {
+                    document.addEventListener("DOMContentLoaded", function () {
+                    var e = "dmca-badge";
+                    var t = "refurl";
+                    var n = document.querySelectorAll('a.'+e);
+                    if (n[0].getAttribute("href").indexOf("refurl") < 0) {
+                        for (var r = 0; r < n.length; r++) {
+                            var i = n[r];
+                            i.href = i.href + (i.href.indexOf("?") === -1 ? "?" : "&") + t + "=" + document.location
+                        }
+                    }
+                    }, false)
+                    }
+                    )()
+                </script>
                 <h4>RSS Feed</h4>
+                <span>Coming soon.</span>
             </aside>
         </div>
         <footer class="bb_foot">Copyright &copy; 2022-2025 BadBunsen (Aleph Diallo). </footer>
